1.6/_sources/modules/generated/sklearn.cross_decomposition.PLSRegression.rst.txt
PLSRegression
=============

.. currentmodule:: sklearn.cross_decomposition

.. autoclass:: PLSRegression
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.cross_decomposition.PLSRegression sklearn.cross_decomposition.PLSRegression.__init__ sklearn.cross_decomposition.PLSRegression.fit sklearn.cross_decomposition.PLSRegression.fit_transform sklearn.cross_decomposition.PLSRegression.get_feature_names_out sklearn.cross_decomposition.PLSRegression.get_metadata_routing sklearn.cross_decomposition.PLSRegression.get_params sklearn.cross_decomposition.PLSRegression.inverse_transform sklearn.cross_decomposition.PLSRegression.predict sklearn.cross_decomposition.PLSRegression.score sklearn.cross_decomposition.PLSRegression.set_output sklearn.cross_decomposition.PLSRegression.set_params sklearn.cross_decomposition.PLSRegression.set_predict_request sklearn.cross_decomposition.PLSRegression.set_score_request sklearn.cross_decomposition.PLSRegression.set_transform_request sklearn.cross_decomposition.PLSRegression.transform 
   :add-heading: Gallery examples
   :heading-level: -