1.7/_sources/modules/generated/sklearn.cross_decomposition.PLSRegression.rst.txt
PLSRegression
=============

.. currentmodule:: sklearn.cross_decomposition

.. autoclass:: PLSRegression
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.cross_decomposition.PLSRegression sklearn.cross_decomposition.PLSRegression.__delattr__ sklearn.cross_decomposition.PLSRegression.__dir__ sklearn.cross_decomposition.PLSRegression.__eq__ sklearn.cross_decomposition.PLSRegression.__format__ sklearn.cross_decomposition.PLSRegression.__ge__ sklearn.cross_decomposition.PLSRegression.__getattribute__ sklearn.cross_decomposition.PLSRegression.__getstate__ sklearn.cross_decomposition.PLSRegression.__gt__ sklearn.cross_decomposition.PLSRegression.__hash__ sklearn.cross_decomposition.PLSRegression.__init__ sklearn.cross_decomposition.PLSRegression.__init_subclass__ sklearn.cross_decomposition.PLSRegression.__le__ sklearn.cross_decomposition.PLSRegression.__lt__ sklearn.cross_decomposition.PLSRegression.__ne__ sklearn.cross_decomposition.PLSRegression.__new__ sklearn.cross_decomposition.PLSRegression.__reduce__ sklearn.cross_decomposition.PLSRegression.__reduce_ex__ sklearn.cross_decomposition.PLSRegression.__repr__ sklearn.cross_decomposition.PLSRegression.__setattr__ sklearn.cross_decomposition.PLSRegression.__setstate__ sklearn.cross_decomposition.PLSRegression.__sizeof__ sklearn.cross_decomposition.PLSRegression.__sklearn_clone__ sklearn.cross_decomposition.PLSRegression.__sklearn_tags__ sklearn.cross_decomposition.PLSRegression.__str__ sklearn.cross_decomposition.PLSRegression.__subclasshook__ sklearn.cross_decomposition.PLSRegression._build_request_for_signature sklearn.cross_decomposition.PLSRegression._get_default_requests sklearn.cross_decomposition.PLSRegression._get_doc_link sklearn.cross_decomposition.PLSRegression._get_metadata_request sklearn.cross_decomposition.PLSRegression._get_param_names sklearn.cross_decomposition.PLSRegression._get_params_html sklearn.cross_decomposition.PLSRegression._html_repr sklearn.cross_decomposition.PLSRegression._repr_html_inner sklearn.cross_decomposition.PLSRegression._repr_mimebundle_ sklearn.cross_decomposition.PLSRegression._validate_params sklearn.cross_decomposition.PLSRegression.fit sklearn.cross_decomposition.PLSRegression.fit_transform sklearn.cross_decomposition.PLSRegression.get_feature_names_out sklearn.cross_decomposition.PLSRegression.get_metadata_routing sklearn.cross_decomposition.PLSRegression.get_params sklearn.cross_decomposition.PLSRegression.inverse_transform sklearn.cross_decomposition.PLSRegression.predict sklearn.cross_decomposition.PLSRegression.score sklearn.cross_decomposition.PLSRegression.set_output sklearn.cross_decomposition.PLSRegression.set_params sklearn.cross_decomposition.PLSRegression.set_predict_request sklearn.cross_decomposition.PLSRegression.set_score_request sklearn.cross_decomposition.PLSRegression.set_transform_request sklearn.cross_decomposition.PLSRegression.transform 
   :add-heading: Gallery examples
   :heading-level: -